# DiSH

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.prod  Makefile.test  README.md  dish.ebnf  line.c  main.c  str.c  str.h  test_dish.sh  word.c  word.h
.github/workflows/: tests.yml
include/: lexer.hpp  string_buffer.hpp
src/: cmd.c  cmd.h  error.c  error.h  executor.cpp  executor.hpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  line.c  line.h  main.c  main.cpp  message.c  message.h  parser.cpp  parser.hpp  str.c  str.h  string_buffer.cpp  token_list.c  token_list.h  wordlist.c  wordlist.h
test/: line.c  line_assert.h  line_process_char.c  str.c  test_line.c  test_str.c  wordlist.c
test/data/input/: empty_word.txt  error_escape_new_line.txt  error_unsupported_escape_sequence.txt  escape_sequence.txt  many.txt  nosplit_mode.txt  split_mode.txt  test3_only_1_cmd.txt  test_many_cmds.txt
test/data/output/: empty_word.txt  error_escape_new_line.txt  error_unmatched_quotes.txt  escape_sequence.txt  many.txt  nosplit_mode.txt  test1_only_1_cmd.txt  test_many_cmds.txt
test/functional/: execution.bats  print_args.sh  processing.bats
test/unit/: CMakeLists.txt  cmd.c  lexer.c  lexer.cpp  lexer_process_char.c  line.c  line_assert.h  line_process.c  line_process_char.c  macros.h  str.c  token_list.c  wordlist.c
